<resources>
    <string name="app_name">DesafioKotlinMonster</string>
    <string name="action_settings">Borrar Todos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="avatar">Monstruo</string>
    <string name="make_click">Click acá para añadir Imágen</string>
    <string name="hint_monster_name">Nombre de tu Monstruo</string>
    <string name="evilness">Maldad</string>
    <string name="monster_points">Monster Points</string>
    <string name="save">Guardar</string>
    <string name="intelligence">Inteligencia</string>
    <string name="name_label">Nombre</string>
    <string name="uglisness">Fealdad</string>
</resources>